turtleart.kerr40.Kerr40.scala.error
Erreur de compilation :
Kerr40:6: error: illegal start of simple expression
}
^